and Add BaseActivity
Signed-off-by: Sun <yinglong.sun@hpe.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
         <item>个人信息</item>
         <item>任务管理</item>
         <item>数据管理</item>
-        <item>设置</item>
+        <item>仪器设置</item>
         <item>系统升级</item>
         <item>关于系统</item>
     </string-array>
